--- a/client/package.json
+++ b/client/package.json
@@ -41,5 +41,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8000/"
+  "proxy": "http://localhost:8000/",
+  "devDependencies": {
+    "tailwindcss": "^3.3.3"
+  }
 }
